parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO sentencias FIN
Rule 2     sentencias -> asignacion
Rule 3     sentencias -> comparacion
Rule 4     sentencias -> funcion
Rule 5     sentencias -> impresion
Rule 6     sentencias -> repeticion
Rule 7     sentencias -> expresion
Rule 8     sentencias -> excepcion
Rule 9     sentencias -> estdatos
Rule 10    asignacion -> ID ASIGNACION valor PCOMA
Rule 11    asignacion -> ID REF ID PCOMA
Rule 12    asignacion -> ID ASIGNACION estdatos PCOMA
Rule 13    asignacion -> ID ASIGNACION expresion PCOMA
Rule 14    valor -> ID
Rule 15    valor -> NUMBER
Rule 16    valor -> FLOAT
Rule 17    valor -> boolean
Rule 18    valor -> CADENA
Rule 19    boolean -> BOOLEANT
Rule 20    boolean -> BOOLEANF
Rule 21    opcomparacion -> IGUAL
Rule 22    opcomparacion -> MAYOR
Rule 23    opcomparacion -> MENOR
Rule 24    opcomparacion -> MAYORIGUAL
Rule 25    opcomparacion -> MENORIGUAL
Rule 26    opcomparacion -> IS_NOT_EQUAL
Rule 27    expcmp -> valor opcomparacion valor
Rule 28    expcmp -> LPAREN valor opcomparacion valor RPAREN oplog LPAREN valor opcomparacion valor RPAREN
Rule 29    expcmplog -> expcmp oplog expcmp
Rule 30    expcmplog -> expcmp oplog expcmplog
Rule 31    oplog -> AND
Rule 32    oplog -> OR
Rule 33    comparacion -> IF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE
Rule 34    comparacion -> IF LPAREN expcmplog RPAREN LLLAVE sentencias RLLAVE
Rule 35    comparacion -> IF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSE LLLAVE sentencias RLLAVE
Rule 36    comparacion -> IF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSEIF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSE LLLAVE sentencias RLLAVE
Rule 37    array -> ARRAY LPAREN contenido RPAREN
Rule 38    contenido -> valor DOUBLE_ARROW valor
Rule 39    contenido -> valor DOUBLE_ARROW valor COMA contenido
Rule 40    contenido -> valor
Rule 41    contenido -> valor COMA contenido
Rule 42    sort -> SORT LPAREN ID RPAREN PCOMA
Rule 43    estdatos -> array
Rule 44    estdatos -> array_map
Rule 45    estdatos -> heap
Rule 46    numero -> NUMBER
Rule 47    numero -> FLOAT
Rule 48    expresionmat -> numero operadormat numero
Rule 49    operadormat -> PLUS
Rule 50    operadormat -> MINUS
Rule 51    operadormat -> TIMES
Rule 52    operadormat -> DIVIDE
Rule 53    operadormat -> MOD
Rule 54    expresion -> expresionmat
Rule 55    expresion -> expcmplog
Rule 56    funcion -> sort
Rule 57    funcion -> FUNCTION NFUNCION LPAREN args RPAREN LLLAVE sentencias RLLAVE
Rule 58    funcion -> FUNCTION NFUNCION LPAREN args RPAREN LLLAVE sentencias RETURN valor PCOMA RLLAVE
Rule 59    args -> ID
Rule 60    args -> ID COMA args
Rule 61    excepcion -> TRY LLLAVE sentencias RLLAVE CATCH LPAREN EXCEPTION ID RPAREN LLLAVE ECHO CADENA COMA ID RLLAVE
Rule 62    impresion -> ECHO valor PCOMA
Rule 63    impresion -> PRINT valor PCOMA
Rule 64    impresion -> PRINT expresionmat PCOMA
Rule 65    repeticionrep -> MAYOR
Rule 66    repeticionrep -> MENOR
Rule 67    repeticionrep -> MAYORIGUAL
Rule 68    repeticionrep -> MENORIGUAL
Rule 69    actualizar -> INCREMENTO
Rule 70    actualizar -> DECREMENTO
Rule 71    repeticion -> FOR LPAREN ID ASIGNACION NUMBER PCOMA ID repeticionrep NUMBER PCOMA ID actualizar RPAREN LLLAVE sentencias RLLAVE
Rule 72    repeticion -> WHILE LPAREN ID opcomparacion valor RPAREN LLLAVE sentencias ID actualizar PCOMA RLLAVE
Rule 73    repeticion -> DO LLLAVE sentencias ID actualizar PCOMA RLLAVE WHILE LPAREN ID opcomparacion valor RPAREN PCOMA
Rule 74    array_map -> ARRAY_MAP LPAREN CADENA COMA valor RPAREN PCOMA
Rule 75    heap -> ID SINGLEARROW INSERT LPAREN LCORCH NUMBER COMA NUMBER RCORCH RPAREN PCOMA
Rule 76    heap -> ID SINGLEARROW INSERT LPAREN ARRAY LPAREN valor DOUBLE_ARROW NUMBER RPAREN RPAREN PCOMA

Terminals, with rules where they appear

AND                  : 31
ARRAY                : 37 76
ARRAY_MAP            : 74
ASIGNACION           : 10 12 13 71
BOOLEANF             : 20
BOOLEANT             : 19
CADENA               : 18 61 74
CATCH                : 61
COMA                 : 39 41 60 61 74 75
DECREMENTO           : 70
DIVIDE               : 52
DO                   : 73
DOUBLE_ARROW         : 38 39 76
ECHO                 : 61 62
ELSE                 : 35 36
ELSEIF               : 36
EXCEPTION            : 61
FIN                  : 1
FLOAT                : 16 47
FOR                  : 71
FUNCTION             : 57 58
ID                   : 10 11 11 12 13 14 42 59 60 61 61 71 71 71 72 72 73 73 75 76
IF                   : 33 34 35 36
IGUAL                : 21
INCREMENTO           : 69
INICIO               : 1
INSERT               : 75 76
IS_NOT_EQUAL         : 26
LCORCH               : 75
LLLAVE               : 33 34 35 35 36 36 36 57 58 61 61 71 72 73
LPAREN               : 28 28 33 34 35 36 36 37 42 57 58 61 71 72 73 74 75 76 76
MAYOR                : 22 65
MAYORIGUAL           : 24 67
MENOR                : 23 66
MENORIGUAL           : 25 68
MINUS                : 50
MOD                  : 53
NFUNCION             : 57 58
NUMBER               : 15 46 71 71 75 75 76
OR                   : 32
PCOMA                : 10 11 12 13 42 58 62 63 64 71 71 72 73 73 74 75 76
PLUS                 : 49
PRINT                : 63 64
RCORCH               : 75
REF                  : 11
RETURN               : 58
RLLAVE               : 33 34 35 35 36 36 36 57 58 61 61 71 72 73
RPAREN               : 28 28 33 34 35 36 36 37 42 57 58 61 71 72 73 74 75 76 76
SINGLEARROW          : 75 76
SORT                 : 42
TIMES                : 51
TRY                  : 61
WHILE                : 72 73
error                : 

Nonterminals, with rules where they appear

actualizar           : 71 72 73
args                 : 57 58 60
array                : 43
array_map            : 44
asignacion           : 2
boolean              : 17
comparacion          : 3
contenido            : 37 39 41
estdatos             : 9 12
excepcion            : 8
expcmp               : 29 29 30 33 35 36 36
expcmplog            : 30 34 55
expresion            : 7 13
expresionmat         : 54 64
funcion              : 4
heap                 : 45
impresion            : 5
numero               : 48 48
opcomparacion        : 27 28 28 72 73
operadormat          : 48
oplog                : 28 29 30
programa             : 0
repeticion           : 6
repeticionrep        : 71
sentencias           : 1 33 34 35 35 36 36 36 57 58 61 71 72 73
sort                 : 56
valor                : 10 27 27 28 28 28 28 38 38 39 39 40 41 58 62 63 72 73 74 76

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO sentencias FIN

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . sentencias FIN
    (2) sentencias -> . asignacion
    (3) sentencias -> . comparacion
    (4) sentencias -> . funcion
    (5) sentencias -> . impresion
    (6) sentencias -> . repeticion
    (7) sentencias -> . expresion
    (8) sentencias -> . excepcion
    (9) sentencias -> . estdatos
    (10) asignacion -> . ID ASIGNACION valor PCOMA
    (11) asignacion -> . ID REF ID PCOMA
    (12) asignacion -> . ID ASIGNACION estdatos PCOMA
    (13) asignacion -> . ID ASIGNACION expresion PCOMA
    (33) comparacion -> . IF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE
    (34) comparacion -> . IF LPAREN expcmplog RPAREN LLLAVE sentencias RLLAVE
    (35) comparacion -> . IF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSE LLLAVE sentencias RLLAVE
    (36) comparacion -> . IF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSEIF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSE LLLAVE sentencias RLLAVE
    (56) funcion -> . sort
    (57) funcion -> . FUNCTION NFUNCION LPAREN args RPAREN LLLAVE sentencias RLLAVE
    (58) funcion -> . FUNCTION NFUNCION LPAREN args RPAREN LLLAVE sentencias RETURN valor PCOMA RLLAVE
    (62) impresion -> . ECHO valor PCOMA
    (63) impresion -> . PRINT valor PCOMA
    (64) impresion -> . PRINT expresionmat PCOMA
    (71) repeticion -> . FOR LPAREN ID ASIGNACION NUMBER PCOMA ID repeticionrep NUMBER PCOMA ID actualizar RPAREN LLLAVE sentencias RLLAVE
    (72) repeticion -> . WHILE LPAREN ID opcomparacion valor RPAREN LLLAVE sentencias ID actualizar PCOMA RLLAVE
    (73) repeticion -> . DO LLLAVE sentencias ID actualizar PCOMA RLLAVE WHILE LPAREN ID opcomparacion valor RPAREN PCOMA
    (54) expresion -> . expresionmat
    (55) expresion -> . expcmplog
    (61) excepcion -> . TRY LLLAVE sentencias RLLAVE CATCH LPAREN EXCEPTION ID RPAREN LLLAVE ECHO CADENA COMA ID RLLAVE
    (43) estdatos -> . array
    (44) estdatos -> . array_map
    (45) estdatos -> . heap
    (42) sort -> . SORT LPAREN ID RPAREN PCOMA
    (48) expresionmat -> . numero operadormat numero
    (29) expcmplog -> . expcmp oplog expcmp
    (30) expcmplog -> . expcmp oplog expcmplog
    (37) array -> . ARRAY LPAREN contenido RPAREN
    (74) array_map -> . ARRAY_MAP LPAREN CADENA COMA valor RPAREN PCOMA
    (75) heap -> . ID SINGLEARROW INSERT LPAREN LCORCH NUMBER COMA NUMBER RCORCH RPAREN PCOMA
    (76) heap -> . ID SINGLEARROW INSERT LPAREN ARRAY LPAREN valor DOUBLE_ARROW NUMBER RPAREN RPAREN PCOMA
    (46) numero -> . NUMBER
    (47) numero -> . FLOAT
    (27) expcmp -> . valor opcomparacion valor
    (28) expcmp -> . LPAREN valor opcomparacion valor RPAREN oplog LPAREN valor opcomparacion valor RPAREN
    (14) valor -> . ID
    (15) valor -> . NUMBER
    (16) valor -> . FLOAT
    (17) valor -> . boolean
    (18) valor -> . CADENA
    (19) boolean -> . BOOLEANT
    (20) boolean -> . BOOLEANF

    ID              shift and go to state 12
    IF              shift and go to state 14
    FUNCTION        shift and go to state 19
    ECHO            shift and go to state 20
    PRINT           shift and go to state 21
    FOR             shift and go to state 23
    WHILE           shift and go to state 25
    DO              shift and go to state 26
    TRY             shift and go to state 27
    SORT            shift and go to state 32
    ARRAY           shift and go to state 34
    ARRAY_MAP       shift and go to state 35
    NUMBER          shift and go to state 24
    FLOAT           shift and go to state 36
    LPAREN          shift and go to state 15
    CADENA          shift and go to state 28
    BOOLEANT        shift and go to state 38
    BOOLEANF        shift and go to state 39

    sentencias                     shift and go to state 3
    asignacion                     shift and go to state 4
    comparacion                    shift and go to state 5
    funcion                        shift and go to state 6
    impresion                      shift and go to state 7
    repeticion                     shift and go to state 8
    expresion                      shift and go to state 9
    excepcion                      shift and go to state 10
    estdatos                       shift and go to state 11
    valor                          shift and go to state 13
    expcmp                         shift and go to state 16
    expcmplog                      shift and go to state 17
    sort                           shift and go to state 18
    expresionmat                   shift and go to state 22
    array                          shift and go to state 29
    array_map                      shift and go to state 30
    heap                           shift and go to state 31
    numero                         shift and go to state 33
    boolean                        shift and go to state 37

state 3

    (1) programa -> INICIO sentencias . FIN

    FIN             shift and go to state 40


state 4

    (2) sentencias -> asignacion .

    FIN             reduce using rule 2 (sentencias -> asignacion .)
    ID              reduce using rule 2 (sentencias -> asignacion .)
    RLLAVE          reduce using rule 2 (sentencias -> asignacion .)
    RETURN          reduce using rule 2 (sentencias -> asignacion .)


state 5

    (3) sentencias -> comparacion .

    FIN             reduce using rule 3 (sentencias -> comparacion .)
    ID              reduce using rule 3 (sentencias -> comparacion .)
    RLLAVE          reduce using rule 3 (sentencias -> comparacion .)
    RETURN          reduce using rule 3 (sentencias -> comparacion .)


state 6

    (4) sentencias -> funcion .

    FIN             reduce using rule 4 (sentencias -> funcion .)
    ID              reduce using rule 4 (sentencias -> funcion .)
    RLLAVE          reduce using rule 4 (sentencias -> funcion .)
    RETURN          reduce using rule 4 (sentencias -> funcion .)


state 7

    (5) sentencias -> impresion .

    FIN             reduce using rule 5 (sentencias -> impresion .)
    ID              reduce using rule 5 (sentencias -> impresion .)
    RLLAVE          reduce using rule 5 (sentencias -> impresion .)
    RETURN          reduce using rule 5 (sentencias -> impresion .)


state 8

    (6) sentencias -> repeticion .

    FIN             reduce using rule 6 (sentencias -> repeticion .)
    ID              reduce using rule 6 (sentencias -> repeticion .)
    RLLAVE          reduce using rule 6 (sentencias -> repeticion .)
    RETURN          reduce using rule 6 (sentencias -> repeticion .)


state 9

    (7) sentencias -> expresion .

    FIN             reduce using rule 7 (sentencias -> expresion .)
    ID              reduce using rule 7 (sentencias -> expresion .)
    RLLAVE          reduce using rule 7 (sentencias -> expresion .)
    RETURN          reduce using rule 7 (sentencias -> expresion .)


state 10

    (8) sentencias -> excepcion .

    FIN             reduce using rule 8 (sentencias -> excepcion .)
    ID              reduce using rule 8 (sentencias -> excepcion .)
    RLLAVE          reduce using rule 8 (sentencias -> excepcion .)
    RETURN          reduce using rule 8 (sentencias -> excepcion .)


state 11

    (9) sentencias -> estdatos .

    FIN             reduce using rule 9 (sentencias -> estdatos .)
    ID              reduce using rule 9 (sentencias -> estdatos .)
    RLLAVE          reduce using rule 9 (sentencias -> estdatos .)
    RETURN          reduce using rule 9 (sentencias -> estdatos .)


state 12

    (10) asignacion -> ID . ASIGNACION valor PCOMA
    (11) asignacion -> ID . REF ID PCOMA
    (12) asignacion -> ID . ASIGNACION estdatos PCOMA
    (13) asignacion -> ID . ASIGNACION expresion PCOMA
    (75) heap -> ID . SINGLEARROW INSERT LPAREN LCORCH NUMBER COMA NUMBER RCORCH RPAREN PCOMA
    (76) heap -> ID . SINGLEARROW INSERT LPAREN ARRAY LPAREN valor DOUBLE_ARROW NUMBER RPAREN RPAREN PCOMA
    (14) valor -> ID .

    ASIGNACION      shift and go to state 41
    REF             shift and go to state 42
    SINGLEARROW     shift and go to state 43
    IGUAL           reduce using rule 14 (valor -> ID .)
    MAYOR           reduce using rule 14 (valor -> ID .)
    MENOR           reduce using rule 14 (valor -> ID .)
    MAYORIGUAL      reduce using rule 14 (valor -> ID .)
    MENORIGUAL      reduce using rule 14 (valor -> ID .)
    IS_NOT_EQUAL    reduce using rule 14 (valor -> ID .)


state 13

    (27) expcmp -> valor . opcomparacion valor
    (21) opcomparacion -> . IGUAL
    (22) opcomparacion -> . MAYOR
    (23) opcomparacion -> . MENOR
    (24) opcomparacion -> . MAYORIGUAL
    (25) opcomparacion -> . MENORIGUAL
    (26) opcomparacion -> . IS_NOT_EQUAL

    IGUAL           shift and go to state 45
    MAYOR           shift and go to state 46
    MENOR           shift and go to state 47
    MAYORIGUAL      shift and go to state 48
    MENORIGUAL      shift and go to state 49
    IS_NOT_EQUAL    shift and go to state 50

    opcomparacion                  shift and go to state 44

state 14

    (33) comparacion -> IF . LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE
    (34) comparacion -> IF . LPAREN expcmplog RPAREN LLLAVE sentencias RLLAVE
    (35) comparacion -> IF . LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSE LLLAVE sentencias RLLAVE
    (36) comparacion -> IF . LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSEIF LPAREN expcmp RPAREN LLLAVE sentencias RLLAVE ELSE LLLAVE sentencias RLLAVE

    LPAREN          shift and go to state 51


state 15

    (28) expcmp -> LPAREN . valor opcomparacion valor RPAREN oplog LPAREN valor opcomparacion valor RPAREN
    (14) valor -> . ID
    (15) valor -> . NUMBER
    (16) valor -> . FLOAT
    (17) valor -> . boolean
    (18) valor -> . CADENA
    (19) boolean -> . BOOLEANT
    (20) boolean -> . BOOLEANF

    ID              shift and go to state 53
    NUMBER          shift and go to state 54
    FLOAT           shift and go to state 55
    CADENA          shift and go to state 28
    BOOLEANT        shift and go to state 38
    BOOLEANF        shift and go to state 39

    valor                          shift and go to state 52
    boolean                        shift and go to state 37

state 16

    (29) expcmplog -> expcmp . oplog expcmp
    (30) expcmplog -> expcmp . oplog expcmplog
    (31) oplog -> . AND
    (32) oplog -> . OR

    AND             shift and go to state 57
    OR              shift and go to state 58

    oplog                          shift and go to state 56

state 17

    (55) expresion -> expcmplog .

    FIN             reduce using rule 55 (expresion -> expcmplog .)
    PCOMA           reduce using rule 55 (expresion -> expcmplog .)
    ID              reduce using rule 55 (expresion -> expcmplog .)
    RLLAVE          reduce using rule 55 (expresion -> expcmplog .)
    RETURN          reduce using rule 55 (expresion -> expcmplog .)


state 18

    (56) funcion -> sort .

    FIN             reduce using rule 56 (funcion -> sort .)
    ID              reduce using rule 56 (funcion -> sort .)
    RLLAVE          reduce using rule 56 (funcion -> sort .)
    RETURN          reduce using rule 56 (funcion -> sort .)


state 19

    (57) funcion -> FUNCTION . NFUNCION LPAREN args RPAREN LLLAVE sentencias RLLAVE
    (58) funcion -> FUNCTION . NFUNCION LPAREN args RPAREN LLLAVE sentencias RETURN valor PCOMA RLLAVE

    NFUNCION        shift and go to state 59


state 20

    (62) impresion -> ECHO . valor PCOMA
    (14) valor -> . ID
    (15) valor -> . NUMBER
    (16) valor -> . FLOAT
    (17) valor -> . boolean
    (18) valor -> . CADENA
    (19) boolean -> . BOOLEANT
    (20) boolean -> . BOOLEANF

    ID              shift and go to state 53
    NUMBER          shift and go to state 54
    FLOAT           shift and go to state 55
    CADENA          shift and go to state 28
    BOOLEANT        shift and go to state 38
    BOOLEANF        shift and go to state 39

    valor                          shift and go to state 60
    boolean                        shift and go to state 37

state 21

    (63) impresion -> PRINT . valor PCOMA
    (64) impresion -> PRINT . expresionmat PCOMA
    (14) valor -> . ID
    (15) valor -> . NUMBER
    (16) valor -> . FLOAT
    (17) valor -> . boolean
    (18) valor -> . CADENA
    (48) expresionmat -> . numero operadormat numero
    (19) boolean -> . BOOLEANT
    (20) boolean -> . BOOLEANF
    (46) numero -> . NUMBER
    (47) numero -> . FLOAT

    ID              shift and go to state 53
    NUMBER          shift and go to state 63
    FLOAT           shift and go to state 64
    CADENA          shift and go to state 28
    BOOLEANT        shift and go to state 38
    BOOLEANF        shift and go to state 39

    valor                          shift and go to state 61
    expresionmat                   shift and go to state 62
    boolean                        shift and go to state 37
    numero                         shift and go to state 33

state 22

    (54) expresion -> expresionmat .

    FIN             reduce using rule 54 (expresion -> expresionmat .)
    PCOMA           reduce using rule 54 (expresion -> expresionmat .)
    ID              reduce using rule 54 (expresion -> expresionmat .)
    RLLAVE          reduce using rule 54 (expresion -> expresionmat .)
    RETURN          reduce using rule 54 (expresion -> expresionmat .)


state 23

    (71) repeticion -> FOR . LPAREN ID ASIGNACION NUMBER PCOMA ID repeticionrep NUMBER PCOMA ID actualizar RPAREN LLLAVE sentencias RLLAVE

    LPAREN          shift and go to state 65


state 24

    (46) numero -> NUMBER .
    (15) valor -> NUMBER .

    PLUS            reduce using rule 46 (numero -> NUMBER .)
    MINUS           reduce using rule 46 (numero -> NUMBER .)
    TIMES           reduce using rule 46 (numero -> NUMBER .)
    DIVIDE          reduce using rule 46 (numero -> NUMBER .)
    MOD             reduce using rule 46 (numero -> NUMBER .)
    IGUAL           reduce using rule 15 (valor -> NUMBER .)
    MAYOR           reduce using rule 15 (valor -> NUMBER .)
    MENOR           reduce using rule 15 (valor -> NUMBER .)
    MAYORIGUAL      reduce using rule 15 (valor -> NUMBER .)
    MENORIGUAL      reduce using rule 15 (valor -> NUMBER .)
    IS_NOT_EQUAL    reduce using rule 15 (valor -> NUMBER .)


state 25

    (72) repeticion -> WHILE . LPAREN ID opcomparacion valor RPAREN LLLAVE sentencias ID actualizar PCOMA RLLAVE

    LPAREN          shift and go to state 66


state 26

    (73) repeticion -> DO . LLLAVE sentencias ID actualizar PCOMA RLLAVE WHILE LPAREN ID opcomparacion valor RPAREN PCOMA

    LLLAVE          shift and go to state 67


state 27

    (61) excepcion -> TRY . LLLAVE sentencias RLLAVE CATCH LPAREN EXCEPTION ID RPAREN LLLAVE ECHO CADENA COMA ID RLLAVE

    LLLAVE          shift and go to state 68


state 28

    (18) valor -> CADENA .

    IGUAL           reduce using rule 18 (valor -> CADENA .)
    MAYOR           reduce using rule 18 (valor -> CADENA .)
    MENOR           reduce using rule 18 (valor -> CADENA .)
    MAYORIGUAL      reduce using rule 18 (valor -> CADENA .)
    MENORIGUAL      reduce using rule 18 (valor -> CADENA .)
    IS_NOT_EQUAL    reduce using rule 18 (valor -> CADENA .)
    PCOMA           reduce using rule 18 (valor -> CADENA .)
    AND             reduce using rule 18 (valor -> CADENA .)
    OR              reduce using rule 18 (valor -> CADENA .)
    RPAREN          reduce using rule 18 (valor -> CADENA .)
    FIN             reduce using rule 18 (valor -> CADENA .)
    ID              reduce using rule 18 (valor -> CADENA .)
    RLLAVE          reduce using rule 18 (valor -> CADENA .)
    RETURN          reduce using rule 18 (valor -> CADENA .)
    DOUBLE_ARROW    reduce using rule 18 (valor -> CADENA .)
    COMA            reduce using rule 18 (valor -> CADENA .)


state 29

    (43) estdatos -> array .

    FIN             reduce using rule 43 (estdatos -> array .)
    PCOMA           reduce using rule 43 (estdatos -> array .)
    ID              reduce using rule 43 (estdatos -> array .)
    RLLAVE          reduce using rule 43 (estdatos -> array .)
    RETURN          reduce using rule 43 (estdatos -> array .)


state 30

    (44) estdatos -> array_map .

    FIN             reduce using rule 44 (estdatos -> array_map .)
    PCOMA           reduce using rule 44 (estdatos -> array_map .)
    ID              reduce using rule 44 (estdatos -> array_map .)
    RLLAVE          reduce using rule 44 (estdatos -> array_map .)
    RETURN          reduce using rule 44 (estdatos -> array_map .)


state 31

    (45) estdatos -> heap .

    FIN             reduce using rule 45 (estdatos -> heap .)
    PCOMA           reduce using rule 45 (estdatos -> heap .)
    ID              reduce using rule 45 (estdatos -> heap .)
    RLLAVE          reduce using rule 45 (estdatos -> heap .)
    RETURN          reduce using rule 45 (estdatos -> heap .)


state 32

    (42) sort -> SORT . LPAREN ID RPAREN PCOMA

    LPAREN          shift and go to state 69


state 33

    (48) expresionmat -> numero . operadormat numero
    (49) operadormat -> . PLUS
    (50) operadormat -> . MINUS
    (51) operadormat -> . TIMES
    (52) operadormat -> . DIVIDE
    (53) operadormat -> . MOD

    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    TIMES           shift and go to state 73
    DIVIDE          shift and go to state 74
    MOD             shift and go to state 75

    operadormat                    shift and go to state 70

state 34

    (37) array -> ARRAY . LPAREN contenido RPAREN

    LPAREN          shift and go to state 76


state 35

    (74) array_map -> ARRAY_MAP . LPAREN CADENA COMA valor RPAREN PCOMA

    LPAREN          shift and go to state 77


state 36

    (47) numero -> FLOAT .
    (16) valor -> FLOAT .

    PLUS            reduce using rule 47 (numero -> FLOAT .)
    MINUS           reduce using rule 47 (numero -> FLOAT .)
    TIMES           reduce using rule 47 (numero -> FLOAT .)
    DIVIDE          reduce using rule 47 (numero -> FLOAT .)
    MOD             reduce using rule 47 (numero -> FLOAT .)
    IGUAL           reduce using rule 16 (valor -> FLOAT .)
    MAYOR           reduce using rule 16 (valor -> FLOAT .)
    MENOR           reduce using rule 16 (valor -> FLOAT .)
    MAYORIGUAL      reduce using rule 16 (valor -> FLOAT .)
    MENORIGUAL      reduce using rule 16 (valor -> FLOAT .)
    IS_NOT_EQUAL    reduce using rule 16 (valor -> FLOAT .)


state 37

    (17) valor -> boolean .

    IGUAL           reduce using rule 17 (valor -> boolean .)
    MAYOR           reduce using rule 17 (valor -> boolean .)
    MENOR           reduce using rule 17 (valor -> boolean .)
    MAYORIGUAL      reduce using rule 17 (valor -> boolean .)
    MENORIGUAL      reduce using rule 17 (valor -> boolean .)
    IS_NOT_EQUAL    reduce using rule 17 (valor -> boolean .)
    PCOMA           reduce using rule 17 (valor -> boolean .)
    AND             reduce using rule 17 (valor -> boolean .)
    OR              reduce using rule 17 (valor -> boolean .)
    RPAREN          reduce using rule 17 (valor -> boolean .)
    FIN             reduce using rule 17 (valor -> boolean .)
    ID              reduce using rule 17 (valor -> boolean .)
    RLLAVE          reduce using rule 17 (valor -> boolean .)
    RETURN          reduce using rule 17 (valor -> boolean .)
    DOUBLE_ARROW    reduce using rule 17 (valor -> boolean .)
    COMA            reduce using rule 17 (valor -> boolean .)


state 38

    (19) boolean -> BOOLEANT .

    IGUAL           reduce using rule 19 (boolean -> BOOLEANT .)
    MAYOR           reduce using rule 19 (boolean -> BOOLEANT .)
    MENOR           reduce using rule 19 (boolean -> BOOLEANT .)
    MAYORIGUAL      reduce using rule 19 (boolean -> BOOLEANT .)
    MENORIGUAL      reduce using rule 19 (boolean -> BOOLEANT .)
    IS_NOT_EQUAL    reduce using rule 19 (boolean -> BOOLEANT .)
    PCOMA           reduce using rule 19 (boolean -> BOOLEANT .)
    AND             reduce using rule 19 (boolean -> BOOLEANT .)
    OR              reduce using rule 19 (boolean -> BOOLEANT .)
    RPAREN          reduce using rule 19 (boolean -> BOOLEANT .)
    FIN             reduce using rule 19 (boolean -> BOOLEANT .)
    ID              reduce using rule 19 (boolean -> BOOLEANT .)
    RLLAVE          reduce using rule 19 (boolean -> BOOLEANT .)
    RETURN          reduce using rule 19 (boolean -> BOOLEANT .)
    DOUBLE_ARROW    reduce using rule 19 (boolean -> BOOLEANT .)
    COMA            reduce using rule 19 (boolean -> BOOLEANT .)


state 39

    (20) boolean -> BOOLEANF .

    IGUAL           reduce using rule 20 (boolean -> BOOLEANF .)
    MAYOR           reduce using rule 20 (boolean -> BOOLEANF .)
    MENOR           reduce using rule 20 (boolean -> BOOLEANF .)
    MAYORIGUAL      reduce using rule 20 (boolean -> BOOLEANF .)
    MENORIGUAL      reduce using rule 20 (boolean -> BOOLEANF .)
    IS_NOT_EQUAL    reduce using rule 20 (boolean -> BOOLEANF .)
    PCOMA           reduce using rule 20 (boolean -> BOOLEANF .)
    AND             reduce using rule 20 (boolean -> BOOLEANF .)
    OR              reduce using rule 20 (boolean -> BOOLEANF .)
    RPAREN          reduce using rule 20 (boolean -> BOOLEANF .)
    FIN             reduce using rule 20 (boolean -> BOOLEANF .)
    ID              reduce using rule 20 (boolean -> BOOLEANF .)
    RLLAVE          reduce using rule 20 (boolean -> BOOLEANF .)
    RETURN          reduce using rule 20 (boolean -> BOOLEANF .)
    DOUBLE_ARROW    reduce using rule 20 (boolean -> BOOLEANF .)
    COMA            reduce using rule 20 (boolean -> BOOLEANF .)


state 40

    (1) programa -> INICIO sentencias FIN .

    $end            reduce using rule 1 (programa -> INICIO sentencias FIN .)


state 41

    (10) asignacion -> ID ASIGNACION . valor PCOMA
    (12) asignacion -> ID ASIGNACION . estdatos PCOMA
    (13) asignacion -> ID ASIGNACION . expresion PCOMA
    (14) valor -> . ID
    (15) valor -> . NUMBER
    (16) valor -> . FLOAT
    (17) valor -> . boolean
    (18) valor -> . CADENA
    (43) estdatos -> . array
    (44) estdatos -> . array_map
    (45) estdatos -> . heap
    (54) expresion -> . expresionmat
    (55) expresion -> . expcmplog
    (19) boolean -> . BOOLEANT
    (20) boolean -> . BOOLEANF
    (37) array -> . ARRAY LPAREN contenido RPAREN
    (74) array_map -> . ARRAY_MAP LPAREN CADENA COMA valor RPAREN PCOMA
    (75) heap -> . ID SINGLEARROW INSERT LPAREN LCORCH NUMBER COMA NUMBER RCORCH RPAREN PCOMA
    (76) heap -> . ID SINGLEARROW INSERT LPAREN ARRAY LPAREN valor DOUBLE_ARROW NUMBER RPAREN RPAREN PCOMA
    (48) expresionmat -> . numero operadormat numero
    (29) expcmplog -> . expcmp oplog expcmp
    (30) expcmplog -> . expcmp oplog expcmplog
    (46) numero -> . NUMBER
    (47) numero -> . FLOAT
    (27) expcmp -> . valor opcomparacion valor
    (28) expcmp -> . LPAREN valor opcomparacion valor RPAREN oplog LPAREN valor opcomparacion valor RPAREN

    ID              shift and go to state 78
    NUMBER          shift and go to state 63
    FLOAT           shift and go to state 64
    CADENA          shift and go to state 28
    BOOLEANT        shift and go to state 38
    BOOLEANF        shift and go to state 39
    ARRAY           shift and go to state 34
    ARRAY_MAP       shift and go to state 35
    LPAREN          shift and go to state 15

    valor                          shift and go to state 79
    estdatos                       shift and go to state 80
    expresion                      shift and go to state 81
    boolean                        shift and go to state 37
    array                          shift and go to state 29
    array_map                      shift and go to state 30
    heap                           shift and go to state 31
    expresionmat                   shift and go to state 22
    expcmplog                      shift and go to state 17
    numero                         shift and go to state 33
    expcmp                         shift and go to state 16

state 42

    (11) asignacion -> ID REF . ID PCOMA

    ID              shift and go to state 82


state 43
